<resources>
    <string name="app_name">CheckDoc</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Entra o Regístrate</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="imgMe">Yo</string>
    <string name="imgMaria">María</string>
    <string name="imgAlfredo">Alfredo</string>
    <string name="selectUser">Pulse en la imagen de la persona a la que desea monitorizar:</string>
    <string name="selectUserNotif">Seleccione la persona de la que desea recibir notificaciones:</string>
    <string name="tituloSeleccionarUsuario"> Inicio </string>
    <string name="userName"> Victor Manuel Zamora España</string>
    <string name="historial">Historial</string>
    <string name="settings"> Ajustes </string>
    <string name="contactDoc"> Contacto del médico </string>
    <string name="contactMec"> Contacto de mantenimiento </string>
    <string name="calendar">Calendario</string>
    <string name="others"> Otros </string>
    <string name="privacyPol"> Política de privacidad </string>
    <string name="logout"> Cerrar Sesión </string>
    <string name="more"> Más </string>
    <string name="title_activity_history"> Historial</string>
    <string name="infoVictor">Varón , 42 años</string>
    <string name="graphic_legend_1">Sus valores</string>
    <string name="graphic_legend_2">Valores normales</string>
    <string name="axis_x_title">Días previos</string>
    <string name="axis_y_title">Valores (mm)</string>
    <string name="title_activity_graphics_indicator">Valores del indicador</string>
    <string name="title_activity_notifications_enabling">Ajustes de notificaciones</string>
    <string name="title_activity_indicators">Indicadores</string>
    <string name="title_activity_calendar">Calendario</string>
    <string name="title_activity_contact_doctor">Contacto con el médico</string>
    <string name="title_activity_contact_mant">Contacto con mantenimiento</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="title_activity_privacy">Política de privacidad</string>
    <string name="normal_state">Estado:Normal</string>
    <string name="low_state">Estado:Valores bajos</string>
    <string name="critical_state">Estado:Crítico</string>
    <string name="victorName">Victor Manuel Zamora España</string>
    <string name="victorDesc">Varón, 42 años</string>
    <string name="mariaName">María Aguilar López</string>
    <string name="mariaDesc">Mujer, 35 años</string>
    <string name="alfredoName">Alfredo Aguilar García</string>
    <string name="alfredoDesc">Varón, 75 años</string>
    <string name="availableNotif">Las notificaciones para este usuario se han habilitado</string>
    <string name="notavailableNotif">Las notificaciones para este usuario se han deshabilitado</string>
    <string name="blodpressure">Presión sanguínea</string>
    <string name="sugar">Niveles de azúcar</string>
    <string name="acid">Ácido úrico</string>
    <string name="legend_normal_state">Valores normales</string>
    <string name="legend_low_state">Valores bajos</string>
    <string name="legend_critical_state">Valores críticos</string>
    <string name="mariaOnlyName">María</string>
    <string name="victorOnlyName">Victor</string>
    <string name="alfredoOnlyName">Alfredo</string>
    <string name="privacy_policy"> I.- Política de protección de datos de Checkdock S.A.\n\n

A través del presente aviso, Checkdock S.A. (en adelante "Checkdock") informa a los usuarios de este sitio acerca de su política de protección de datos personales, con la finalidad de que decidan libre y voluntariamente si desean facilitar a Checkdock los datos personales que les puedan ser solicitados.\n\n

Si el usuario fuera menor de edad, se requiere que cuente con el previo consentimiento de sus padres o tutores antes de proceder a la inclusión de sus datos personales en los formularios del sitio. Checkdock S.A. se exime de cualquier responsabilidad por el incumplimiento de este requisito.\n\n

Salvo que específicamente se establezca lo contrario, se considerará necesario completar los datos en todos los campos de un específico formulario. Si no se suministraran todos los datos considerados necesarios, que se destacarán diferenciando el color, Checkdock podrá no registrar al usuario (en el caso del formulario de registro de usuarios) o no prestarle un(os) determinado(s) servicio(s) (en el caso de un formulario para un determinado servicio). El usuario deberá rellenar los formularios con datos verdaderos, exactos, completos y actualizados. El usuario será el único responsable de cualquier daño o perjuicio, directo o indirecto, que pudiera ocasionar a Checkdock o a cualquier tercero a causa de la cumplimentación de los formularios con datos falsos, inexactos, incompletos o no actualizados.\n\n

De conformidad con lo establecido en la Ley Orgánica 15/99, de 13 de diciembre, de Protección de Datos de Carácter Personal, en adelante LOPD, se informa a los usuarios de la existencia de ficheros automatizados en los que se almacenan los datos que se recaban en los distintos formularios de este sitio.\n\n

Los ficheros automatizados de datos son responsabilidad de Checkdock, cuya dirección actual es  Avd de la Universidad, Leganés (España) salvo que explícitamente se indique otro responsable para un fichero concreto.\n\n

Mediante el envío de esta información, el usuario autoriza expresamente a Checkdock o al responsable del fichero que específicamente se indique a tratar sus datos personales, incluso aquellos relativos a la salud, en la medida en que sean necesarios para el cumplimiento y mantenimiento de las relaciones existentes entre las partes.\n\n

El ejercicio de los derechos de oposición, acceso, rectificación y cancelación de estos datos conforme se establece en la normativa aplicable, pueden ser ejercitados en la sede de la entidad, o a través del sitio web.\n\n
</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="contact_doctor">
        "Datos de contacto de tu doctor:\n\n"
        "  Nombre: Carlos\n"
        "  Correo electrónico\n"
        "  Teléfono de contacto: 678677890\n"
        "  Dirección: C/Madrid 7, 34\n"
        "  28097, Getafe\n"
    </string>
    <string name="opened">
        "Abierto todos los días de 8A.M. a 9P.M."
    </string>
    <string name="imgMapDocDescrp">
        Imagen del mapa de contacto con el doctor.
    </string>
</resources>