<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/contactDoctor"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contactDoc" />
        <item
            android:id="@+id/contactMant"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contactMec" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/privacyPol"
                android:title="@string/privacyPol" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
